--- a/index.html
+++ b/index.html
@@ -209,7 +209,19 @@
     document.getElementById("order").scrollIntoView({ behavior: "smooth" });
   }
 </script>
+<section id="about" class="bg-light py-5">
+  <div class="container">
+    <h2 class="text-center mb-3">About Threadnova</h2>
+    <p class="text-center">Threadnova is where fashion meets freedom. We create tees that are bold, comfy, and speak your style. Perfect for everyday wear or statement days.</p>
+  </div>
+</section>
 
+<section id="contact" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-3">Contact Us</h2>
+    <p class="text-center">Have questions? Email us at <a href="mailto:threadnovaa@gmail.com">hello@threadnova.com</a></p>
+  </div>
+</section>
 <footer class="bg-dark text-white text-center py-3">
   <p>&copy; 2025 Threadnova</p>
 </footer>
