--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
       <div class="card-body">
         <h5 class="card-title">Forgiven Tee</h5>
         <p class="card-text">This t-shirt features a bold and symbolic design on the back. Centered is a large, ornate cross with extended angel wings, representing grace, redemption, and divine protection. Above the cross, the word "FORGIVEN" is prominently printed in all caps, emphasizing themes of mercy and spiritual renewal.</p>
-        <p><span class="text-decoration-line-through text-muted">₹1299</span> <span class="fw-bold ms-2">₹899</span></p>
-        <a href="#order" onclick="addToCart('Forgiven Tee', 899)" class="btn btn-dark">Add to Cart</a>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2"> 1199</span></p>
+        <a href="#order" onclick="addToCart('Forgiven Tee', 1199)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -754,10 +754,10 @@
     <div class="card h-100 text-center">
       <img src="assets/image/faith.jpeg" class="card-img-top" alt="faith tee">
       <div class="card-body">
-        <h5 class="card-title">Forgiven Tee</h5>
+        <h5 class="card-title">Faith Tee</h5>
         <p class="card-text">A powerful design blending spiritual symbolism with bold imagery. A detailed snake coils around a stylized cross, representing the duality of temptation and belief. Above the graphic, the word "FAITH" is featured in capital letters, creating a dramatic and reflective aesthetic.</p>
-        <p><span class="text-decoration-line-through text-muted">₹1299</span> <span class="fw-bold ms-2">₹899</span></p>
-        <a href="#order" onclick="addToCart('faith Tee', 899)" class="btn btn-dark">Add to Cart</a>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2"> 1199</span></p>
+        <a href="#order" onclick="addToCart('faith Tee', 1199)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -767,8 +767,8 @@
       <div class="card-body">
         <h5 class="card-title">Hope Tee</h5>
         <p class="card-text">Centered on this shirt is a sword with wide-spread angelic wings, symbolizing strength, protection, and optimism. The word "HOPE" sits above in bold typography, evoking a message of resilience and positive outlook.</p>
-        <p><span class="text-decoration-line-through text-muted">₹1299</span> <span class="fw-bold ms-2">₹899</span></p>
-        <a href="#order" onclick="addToCart('Hope Tee', 899)" class="btn btn-dark">Add to Cart</a>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2"> 1199</span></p>
+        <a href="#order" onclick="addToCart('Hope Tee', 1199)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
   </div>
