--- a/index.html
+++ b/index.html
@@ -675,14 +675,14 @@
       </div>
     </div>
   </div>
-  <!--<div class="col">
+  <div class="col">
     <div class="card h-100 text-center">
-      <img src="assets/image/tom-jerry white front.jpeg" class="card-img-top" alt="Tom and Jerry White Tee">
+      <img src="assets/image/stylish.jpeg" class="card-img-top" alt="Stylish Tee">
       <div class="card-body">
-        <h5 class="card-title">Tom and Jerry White Tee</h5>
-        <p class="card-text">Classic Tom and Jerry mischief in pastel dino suits. Great for fans!</p>
+        <h5 class="card-title">Stylish Tee</h5>
+        <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
         <p><span class="text-decoration-line-through text-muted">₹1200</span> <span class="fw-bold ms-2">₹850</span></p>
-        <a href="#order" onclick="addToCart('Tom and Jerry White Tee', 850)" class="btn btn-dark">Add to Cart</a>
+        <a href="#order" onclick="addToCart('Stylish Tee', 850)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -691,12 +691,12 @@
   
   <div class="col">
     <div class="card h-100 text-center">
-      <img src="assets/image/shivmountain white front.jpeg" class="card-img-top" alt="Shiv Mountain White Tee">
+      <img src="assets/image/stylish- no mornings.jpeg" class="card-img-top" alt="Not Made for mornings Tee">
       <div class="card-body">
-        <h5 class="card-title">Shiv Mountain White Tee</h5>
-        <p class="card-text">Spiritual elegance in white—featuring the powerful Shiv symbol artwork.</p>
-        <p><span class="text-decoration-line-through text-muted">₹1200</span> <span class="fw-bold ms-2">₹850</span></p>
-        <a href="#order" onclick="addToCart('Shiv Mountain White Tee', 850)" class="btn btn-dark">Add to Cart</a>
+        <h5 class="card-title">Not Made for mornings Tee</h5>
+        <p class="card-text">an anti-morning sentiment. May include sleepy eyes, coffee cup, or sarcastic text expressing dislike for early hours — all while staying fashionable.</p>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+        <a href="#order" onclick="addToCart('Not Made for mornings Tee', 1199)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -705,27 +705,49 @@
   
   <div class="col">
     <div class="card h-100 text-center">
-      <img src="assets/image/stitch skyblue front.jpeg" class="card-img-top" alt="Stitch Sky Blue Tee">
+      <img src="assets/image/sassy.jpeg" class="card-img-top" alt="sassy Tee">
       <div class="card-body">
-        <h5 class="card-title">Stitch Sky Blue Tee</h5>
-        <p class="card-text">Vibrant Stitch design on soft sky blue—style and comfort in one.</p>
-        <p><span class="text-decoration-line-through text-muted">₹1200</span> <span class="fw-bold ms-2">₹850</span></p>
-        <a href="#order" onclick="addToCart('Stitch Sky Blue Tee', 850)" class="btn btn-dark">Add to Cart</a>
+        <h5 class="card-title">sassy Tee</h5>
+        <p class="card-text">A confident, attitude-filled pose or expression, possibly with hand on hip, raised brow, or a stylish flair. The vibe is playful, bold, and full of personality.</p>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+        <a href="#order" onclick="addToCart('sassy Tee', 1199)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
   </div>
   
   <div class="col">
     <div class="card h-100 text-center">
-      <img src="assets/image/stitch white front.jpeg" class="card-img-top" alt="Stitch White Tee">
+      <img src="assets/image/cool who.jpeg" class="card-img-top" alt="cool who Tee">
       <div class="card-body">
-        <h5 class="card-title">Stitch White Tee</h5>
-        <p class="card-text">Clean white tee featuring a playful Stitch in a dog hoodie. Adorable!</p>
-        <p><span class="text-decoration-line-through text-muted">₹1200</span> <span class="fw-bold ms-2">₹850</span></p>
-        <a href="#order" onclick="addToCart('Stitch White Tee', 850)" class="btn btn-dark">Add to Cart</a>
+        <h5 class="card-title">cool who Tee</h5>
+        <p class="card-text">Suggests a mysterious or aloof look, perhaps sunglasses or a nonchalant expression. A "too cool to care" energy, with a question of identity or intrigue.</p>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+        <a href="#order" onclick="addToCart('Stitch White Tee', 1199)" class="btn btn-dark">Add to Cart</a>
       </div>
     </div>
-  </div>-->
+  </div>
+  <div class="col">
+    <div class="card h-100 text-center">
+      <img src="assets/image/girly.jpeg" class="card-img-top" alt="girly Tee">
+      <div class="card-body">
+        <h5 class="card-title">girly Tee</h5>
+        <p class="card-text"> This image likely emphasizes a feminine aesthetic — soft colors, hearts, sparkles, or cute elements — radiating sweetness and charm.</p>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+        <a href="#order" onclick="addToCart('girly Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 text-center">
+      <img src="assets/image/devil.jpeg" class="card-img-top" alt="devil Tee">
+      <div class="card-body">
+        <h5 class="card-title">devil Tee</h5>
+        <p class="card-text"> This image likely features a character with devilish or mischievous elements — possibly horns, red tones, or a cheeky expression — conveying a bold or rebellious attitude.</p>
+        <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+        <a href="#order" onclick="addToCart('devil Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+      </div>
+    </div>
+  </div>
   
   <div class="col">
     <div class="card h-100 text-center">
