--- a/index.html
+++ b/index.html
@@ -159,7 +159,18 @@
               <h5 class="card-title">devil Tee</h5>
               <p class="card-text"> This image likely features a character with devilish or mischievous elements — possibly horns, red tones, or a cheeky expression — conveying a bold or rebellious attitude.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
-              <a href="#order" onclick="addToCart('devil Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+              <a href="#order" onclick="addToCart('black devil Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/white devil.jpeg" class="card-img-top" alt="devil Tee">
+            <div class="card-body">
+              <h5 class="card-title">devil Tee</h5>
+              <p class="card-text"> This image likely features a character with devilish or mischievous elements — possibly horns, red tones, or a cheeky expression — conveying a bold or rebellious attitude.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('white devil Tee', 1199)" class="btn btn-dark">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -208,7 +219,42 @@
             </div>
           </div>
         </div>
-      </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/peace blackkkkkkkk.jpeg" class="card-img-top" alt="peace">
+            <div class="card-body">
+              <h5 class="card-title">Peace Tee</h5>
+              <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('Peace Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/money_mischief_black.jpeg" class="card-img-top" alt="money_mischief">
+            <div class="card-body">
+              <h5 class="card-title">money_mischief Tee</h5>
+              <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('money_mischief black Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/money_mischief_white.jpeg" class="card-img-top" alt="money_mischief">
+            <div class="card-body">
+              <h5 class="card-title">money_mischief Tee</h5>
+              <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('money_mischief white Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+    
+    
+    </div>
     </div>
     </section>
 
