--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </div>
           <div class="col">
             <div class="card h-100 text-center">
-              <img src="assets/image/black car.jpeg" class="card-img-top" alt="Urban Black Tee">
+              <img src="assets/image/nsx car black back.jpeg" class="card-img-top" alt="Urban Black Tee">
               <div class="card-body">
                 <h5 class="card-title">Urban Black Tee</h5>
                 <p class="card-text">A sleek black tee for everyday comfort and style.</p>
@@ -289,9 +289,9 @@
 
           <div class="col">
             <div class="card h-100 text-center">
-              <img src="assets/image/white car.jpeg" class="card-img-top" alt="Mountain White Tee">
+              <img src="assets/image/81 white back.jpeg" class="card-img-top" alt="white car Tee">
               <div class="card-body">
-                <h5 class="card-title">Mountain White Tee</h5>
+                <h5 class="card-title">white car Tee</h5>
                 <p class="card-text">Minimal design, maximal vibe. A white tee for every season.</p>
                 <p><span class="text-decoration-line-through text-muted">₹1699</span> <span class="fw-bold ms-2">₹899</span></p>
                 <a href="#order" onclick="addToCart('Mountain White Tee', 899)" class="btn btn-dark">Add to Cart</a>
