--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img src="assets/image/devil.jpeg" class="card-img-top" alt="devil Tee">
             <div class="card-body">
               <h5 class="card-title">devil Tee</h5>
-              <p class="card-text"> This image likely features a character with devilish or mischievous elements — possibly horns, red tones, or a cheeky expression — conveying a bold or rebellious attitude.</p>
+              <p class="card-text">For the true edge-rider. The Demon Throne Tee shows a red devil on a throne of skulls, surrounded by flames and snakes. A dark graphic with loud energy.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
               <a href="#order" onclick="addToCart('black devil Tee', 1199)" class="btn btn-dark">Add to Cart</a>
             </div>
@@ -168,7 +168,7 @@
             <img src="assets/image/white devil.jpeg" class="card-img-top" alt="devil Tee">
             <div class="card-body">
               <h5 class="card-title">devil Tee</h5>
-              <p class="card-text"> This image likely features a character with devilish or mischievous elements — possibly horns, red tones, or a cheeky expression — conveying a bold or rebellious attitude.</p>
+              <p class="card-text"> Cute but dangerous. The Little Bad Boys Tee features a devilish cartoon character juggling planets — an ode to mischief, wonder, and cosmic confidence.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
               <a href="#order" onclick="addToCart('white devil Tee', 1199)" class="btn btn-dark">Add to Cart</a>
             </div>
@@ -224,7 +224,7 @@
             <img src="assets/image/peace blackkkkkkkk.jpeg" class="card-img-top" alt="peace">
             <div class="card-body">
               <h5 class="card-title">Peace Tee</h5>
-              <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
+              <p class="card-text"> Loudly subtle. The Peace Tee pairs a bold white dove with elegant typography. Minimal yet meaningful — a peaceful protest in wearable form.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
               <a href="#order" onclick="addToCart('Peace Tee', 1199)" class="btn btn-dark">Add to Cart</a>
             </div>
@@ -235,7 +235,7 @@
             <img src="assets/image/money_mischief_black.jpeg" class="card-img-top" alt="money_mischief">
             <div class="card-body">
               <h5 class="card-title">money_mischief Tee</h5>
-              <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
+              <p class="card-text">This one’s for the chaos agents. The Money Mischief Tee features a reaper with dollar signs and danger symbols — blending street mischief with an anti-establishment punch.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
               <a href="#order" onclick="addToCart('money_mischief black Tee', 1199)" class="btn btn-dark">Add to Cart</a>
             </div>
@@ -246,9 +246,42 @@
             <img src="assets/image/money_mischief_white.jpeg" class="card-img-top" alt="money_mischief">
             <div class="card-body">
               <h5 class="card-title">money_mischief Tee</h5>
-              <p class="card-text"> A fashion-forward character or design, possibly with trendy clothes, confident posture, and attention to accessories. Cool, clean, and modern.</p>
+              <p class="card-text">Same wild attitude, fresh white base. If you liked the original, this variant brings even more contrast to the chaos. Perfect for day fits and brighter moods.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
               <a href="#order" onclick="addToCart('money_mischief white Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Addict Tee (White).jpeg" class="card-img-top" alt="Addict Tee">
+            <div class="card-body">
+              <h5 class="card-title">Addict Tee</h5>
+              <p class="card-text"> Art meets rebellion. The Addict Tee showcases a graffiti-inspired twist on classic sculpture with messages like "HELP", "VOID", and "WASTE" — a raw portrayal of modern chaos.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('Addict Tee', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Gorilla Gang Tee (Black).jpeg" class="card-img-top" alt="Gorilla Gang Tee (Black)">
+            <div class="card-body">
+              <h5 class="card-title">Gorilla Gang Tee (Black)</h5>
+              <p class="card-text">Make a bold entrance with our Gorilla Gang Tee, featuring a suited-up gorilla boss smoking a cigar. With neon green accents and mob-boss vibes, this tee is a statement for anyone who leads with power and style.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('Gorilla Gang Tee (Black)', 1199)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Oblivion Tee (White).jpeg" class="card-img-top" alt="Oblivion Tee (White)">
+            <div class="card-body">
+              <h5 class="card-title">Oblivion Tee (White)</h5>
+              <p class="card-text">Enter the world of cyberpunk mystique. The Oblivion Tee features a dystopian humanoid design with bold “WEAR YOUR CHAOS” lettering, perfect for expressing your inner enigma.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹1199</span></p>
+              <a href="#order" onclick="addToCart('Oblivion Tee (White)', 1199)" class="btn btn-dark">Add to Cart</a>
             </div>
           </div>
         </div>
