--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               <h5 class="card-title">let me in Tee (White)</h5>
               <p class="card-text">Powerful and raw, Let Me In symbolizes the struggle to be heard and seen. A compelling piece for those who’ve ever knocked on closed doors, this design evokes emotion and resilience. Make a statement — art that speaks louder than words.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
-              <a href="#order" onclick="addToCart('Oblivion Tee (White)', 999)" class="btn btn-dark">Add to Cart</a>
+              <a href="#order" onclick="addToCart('let me in Tee', 999)" class="btn btn-dark">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -336,7 +336,29 @@
               <h5 class="card-title">Mind Tee (White)</h5>
               <p class="card-text">Dive deep into the complexity of thought with Mind, a surreal design exploring intellect, chaos, and creativity. A conversation starter for any space, this piece is perfect for thinkers, dreamers, and innovators.</p>
               <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
-              <a href="#order" onclick="addToCart('Shackles Tee (White)', 999)" class="btn btn-dark">Add to Cart</a>
+              <a href="#order" onclick="addToCart('mind tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Infernal King.jpeg" class="card-img-top" alt="Infernal King">
+            <div class="card-body">
+              <h5 class="card-title">Infernal King Tee</h5>
+              <p class="card-text">Command attention with the Threadnova "Infernal King" Tee. This fierce graphic tee showcases a dark demonic beast with glowing eyes, crowned with ethereal flames and wings rising from the shadows. The “THREADNOVA” logo in fiery orange adds a blazing contrast to the deep black canvas.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('Infernal King', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Ghost Ride.jpeg" class="card-img-top" alt="Ghost Ride Tee">
+            <div class="card-body">
+              <h5 class="card-title">Ghost Ride Tee</h5>
+              <p class="card-text">Elevate your streetwear with the Threadnova "Ghost Ride" Tee, where urban grit meets graphic cool. This premium black T-shirt features a bold graphic of a drifting car surrounded by ghostly smoke and shadowy cityscape elements. The design is topped with the "THREADNOVA" logo in a metallic grey font, exuding power and mystery.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('Ghost Ride Tee', 999)" class="btn btn-dark">Add to Cart</a>
             </div>
           </div>
         </div>
