--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Threadnova – Stylish Tees</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="google-site-verification" content="ABKqLDc0POQAqtwi_TNW1ea-I3YW9OQ6kVHHPEW_Y6w" />
   <style>
     .card-img-top {
       height: 300px;
