--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@ let cart = [];
 <section id="contact" class="py-5">
   <div class="container">
     <h2 class="text-center mb-3">Contact Us</h2>
-    <p class="text-center">Have questions? Email us at <a href="mailto:threadnovaa@gmail.com">hello@threadnova.com</a></p>
+    <p class="text-center">Have questions? Email us at <a href="mailto:threadnovaa@gmail.com">threadnovaa@gmail.com</a></p>
   </div>
 </section>
 <footer class="bg-dark text-white text-center py-3">
