--- a/index.html
+++ b/index.html
@@ -376,7 +376,18 @@
               <a href="#order" onclick="addToCart('keep flying Tee', 999)" class="btn btn-dark">Add to Cart</a>
             </div>
           </div>
-        </div>        
+        </div> 
+          <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/beastroar.jpeg" class="card-img-top" alt="beast roar Tee">
+            <div class="card-body">
+              <h5 class="card-title">beast Tee</h5>
+              <p class="card-text">Channel raw power and unapologetic energy with this striking tee. Featuring a ferocious, vintage-style roaring panther graphic and the bold slogan “LET YOUR INNER BEAST ROAR,” this piece is made to turn heads and stir souls.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('beast roar Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div> 
     
     </div>
     </div>
