--- a/index.html
+++ b/index.html
@@ -388,6 +388,39 @@
             </div>
           </div>
         </div> 
+         <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/butterfly.jpeg" class="card-img-top" alt="butterfly Tee">
+            <div class="card-body">
+              <h5 class="card-title">Botanical Butterfly Wings</h5>
+              <p class="card-text">Take flight in subtle elegance with the Botanical Butterfly Wings tee. This design transforms delicate pink-hued leaves into ethereal wings on the back, creating a serene and artistic look. Minimalist from the front, statement from behind—this shirt is perfect for nature lovers and dreamers alike.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('butterfly Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>  
+      <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/growingrace.jpeg" class="card-img-top" alt="grow in grace Tee">
+            <div class="card-body">
+              <h5 class="card-title">grow in grace Tee</h5>
+              <p class="card-text">Flourish with purpose in our Grow in Grace tee — a heartwarming blend of whimsy and wisdom. Featuring vibrant floral art, peaceful character illustration, and uplifting typography, this black tee is perfect for those who embrace personal growth and positivity. Made with ultra-soft cotton for all-day comfort, it's a wearable reminder to bloom beautifully through every season of life.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('grow in grace Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>    
+      <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/friendsXtalwinder.jpg" class="card-img-top" alt="friendsXtalwinder Tee">
+            <div class="card-body">
+              <h5 class="card-title">Friends X Talwinder Tee</h5>
+              <p class="card-text">Turn ordinary moments into neon-lit memories with this standout tee inspired by reflective thoughts and urban expression. Featuring vivid, glow-style graphics and the phrases “I’ll be there for you” and “Only in Spirit,” this tee balances nostalgia, introspection, and artistic edge. An homage to friendship, chess, and late-night talks over coffee.</p>
+              <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('friendsXtalwinder Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>   
     
     </div>
     </div>
