--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Banner Image -->
   <div>
-    <img src="assets/Not Just Tees. It’s a Statement..png" alt="Banner" class="img-fluid w-100" style="max-height: 400px; object-fit: cover;">
+    <img src="assets/image/Not Just Tees. It’s a Statement..png" alt="Banner" class="img-fluid w-100" style="max-height: 400px; object-fit: cover;">
   </div>
  <section id="premium" class="py-5">
     <div class="container">
